# keri-serverless-mailbox

./: .gitignore  LICENSE  README.md  pyproject.toml
src/keri_serverless_mailbox/: __init__.py  client.py  cursor.py  cursor_store.py  fetch.py  serverless.py  standard.py  strategy.py
src/keri_serverless_mailbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_cursor_store.py  test_discovery.py  test_query_v1.py  test_serverless_e2e.py  test_serverless_strategy.py  test_standard_strategy.py
