[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keri-serverless-mailbox"
version = "0.2.0"
description = "Universal KERI mailbox client: resolve via agenting.mailbox, discover capability from the KEL, run a swappable retrieval strategy (Standard SSE; Serverless WebSocket notify-and-fetch)."
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Usurance"}]
dependencies = ["keri", "hio"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/usuranceai/keri-serverless-mailbox"
Repository = "https://github.com/usuranceai/keri-serverless-mailbox"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../keripy/src"]
testpaths = ["tests"]
